--- a/style.css
+++ b/style.css
@@ -7,3 +7,52 @@
   margin: 0;
   padding: 0;
 }
+
+.container {
+  font-family: 'Open Sans', sans-serif;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  margin-top: 1rem;
+  letter-spacing: 3px;
+}
+
+.people-list {
+  width: 70vw;
+  max-width: 40rem;
+  background-color: rgba(207, 204, 174, 0.3);
+  border-radius: 10px;
+  margin-top: 2rem;
+  display: flex;
+}
+.firstname-ul {
+  margin: 1rem;
+}
+.firstname-ul .list-item {
+  font-weight: 800;
+}
+.info-ul {
+ margin: 1rem;
+ margin-left: 5rem;
+}
+
+.list-item {
+  list-style-type: none;
+  margin: 1rem 0;
+}
+
+.btn-container {
+  margin-top: 2rem;
+}
+.btn-container {
+  text-align: center;
+}
+.btn {
+  margin: 1rem 0.5rem;
+  padding: 0.3rem;
+  letter-spacing: 2px;
+}
