basic form function done

--- a/style.css
+++ b/style.css
@@ -56,3 +56,33 @@
   padding: 0.3rem;
   letter-spacing: 2px;
 }
+
+.add-person {
+  width: 70vw;
+  max-width: 40rem;
+  background-color: rgba(17, 170, 68, 0.3);
+  border-radius: 10px;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  padding: 1rem;
+}
+.form-title {
+  text-align: center;
+  letter-spacing: 2px;
+}
+.form-input {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+.form-input .input {
+  margin-bottom: 0.5rem;
+  padding: 0.25rem;
+}
+.addperson-btn {
+  padding: 0.75rem 0;
+  width: 10rem;
+  margin: 0 auto;
+}
